GNOME Bugzilla – Bug 753066
rtpstreamdepay: No Caps set error when activating in pull mode
Last modified: 2015-08-16 13:40:32 UTC
Created attachment 308475 [details] audio capture in rtpstreampay format [16 bits packet size, RTP packet] gst-launch-1.0 filesrc location=audio.rtp ! "application/x-rtp-stream" ! rtpstreamdepay ! fakesink Setting pipeline to PAUSED ... Pipeline is PREROLLING ... ERROR: from element /GstPipeline:pipeline0/GstRtpStreamDepay:rtpstreamdepay0: No caps set Additional debug info: gstbaseparse.c(2401): gst_base_parse_push_frame (): /GstPipeline:pipeline0/GstRtpStreamDepay:rtpstreamdepay0 ERROR: pipeline doesn't want to preroll. Setting pipeline to NULL ... Freeing pipeline ... Adding a queue after filesrc fixes the caps error: gst-launch-1.0 filesrc location=audio.rtp ! queue ! "application/x-rtp-stream" ! rtpstreamdepay ! fakesink
commit c9ea95481c94012cea0869efdec7ded8f81198e9 Author: Sebastian Dröge <sebastian@centricular.com> Date: Tue Aug 4 20:59:17 2015 +0300 rtpstreamdepay: Only allow activation in push mode We need a proper caps event from upstream with the full RTP caps as we can't create caps ourselves from thin air. Fixes usage of rtpstreamdepay after e.g. a filesrc or any other element that supports pull mode. https://bugzilla.gnome.org/show_bug.cgi?id=753066